# resume-analyzer-backend

./: .gitignore  list_models.py  main.py  pyproject.toml  requirements.txt  test_agent.py  test_embeddings.py
agents/: resume_analysis_agent.py
config/: mongodb.py
controllers/: __init__.py  auth_controller.py  history_controller.py  resume_analysis_controller.py
models/: user.py
routes/: auth_route.py  resume_analysis_route.py
utils/: util.py
